    Now it should only fail by manual indication if the actual sleep action
    fails. (LP: #1169922)
  * scripts/bluetooth_test: test no longer generates odd Broken Pipe error when
    the dpkg bit verifies obexftp is installed (LP: #1169488)

  [ Daniel Manrique ]
  * scripts/alsa_record_playback: Replaced alsasrc with autoaudiosrc
    (LP: #1059544)

 -- Brendan Donegan <brendan.donegan@canonical.com>  Wed, 24 Apr 2013 16:33:15 +0100

checkbox (0.15.8) raring; urgency=low

  * jobs/monitor.txt.in: Modified the description of dim_brightness test to make 
    it consistent with the code. (LP: #1170244)

  [ Jeff Lane] 
  * jobs/miscellanea.txt.in: Added jobs for manual verification of PXE boot and
    remote IPMI to improve server test coverage.
  * jobs/led.txt.in: Modified Jobs: led/power, led/wlan, led/wlan-disabled. New
    jobs: led/power-blink-suspend, led/suspend, led/mute
    jobs/keys.txt.in: modified keys/wireless
  * plugins/lock_prompt.py: added a lock release to cleanly clear lock on stop.
    plugins/persist_prompt.py: promoted save to run before lock release.
    checkbox/lib/fifo.py: trap OSError exception at close when the input/output
    fifo fds disappear before fifo.close() can get to them. (LP: #115561)

  [ Brendan Donegan ]
  * scripts/sources_test - modified script so that it takes sources list
    location and repository list as arguments
  * jobs/miscellanea.txt.in - provide REPOSITORY and SOURCES_LIST environment
    variables to the sources_test script (LP: #1149288)
  * Added mobile broadband tests and updated create_connection script to allow
    creation of mobile broadband connections.

  [ Sylvain Pineau ]
  * debian/control: Added python3-mock as a build dependency.
  * debian/rules: Clean __pycache__ directory after running scripts unit tests.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Tue, 23 Apr 2013 14:53:54 +0100

checkbox (0.15.7) raring; urgency=low

  [ Zygmunt Krynicki ]