@@ -1,0 +1,4 @@
+[FTP]
+Target: canonical.com
+User: anonymous
+Pass: 
