@@ -26,7 +26,13 @@ checkbox (0.16) UNRELEASED; urgency=low
   * scripts/alsa_record_playback: Replaced alsasrc with autoaudiosrc
     (LP: #1059544)
 
- -- Brendan Donegan <brendan.donegan@canonical.com>  Wed, 24 Apr 2013 16:33:15 +0100
+  [ Jeff Marcom ]
+  * scripts/network: added new script for testing and retrieving information for
+    network interfaces.
+  * configs,examples/network.cfg: added config file 
+    for network test configuration and setup
+
+ -- Jeff Marcom <jeffmarcom@ubuntu.com>  Wed, 24 Apr 2013 13:35:39 -0400
 
 checkbox (0.15.8) raring; urgency=low
 
